# kaigen-phantom

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INTEGRATION_TEST_STATUS.md  MANUAL_TEST_CHECKLIST.md  Parameter value map.mhtml  build_release.bat
Source/: ABSlotManager.cpp  ABSlotManager.h  MorphEngine.cpp  MorphEngine.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  PresetTypes.h
Source/Engines/: BassExtractor.cpp  BassExtractor.h  BinauralStage.cpp  BinauralStage.h  CrossoverBlend.cpp  CrossoverBlend.h  EnvelopeFollower.cpp  EnvelopeFollower.h  HarmonicGenerator.cpp  HarmonicGenerator.h  PerceptualOptimizer.cpp  PerceptualOptimizer.h  PhantomEngine.cpp  PhantomEngine.h  PitchTracker.cpp  PitchTracker.h  WaveletSynth.cpp  WaveletSynth.h  Waveshaper.cpp  Waveshaper.h  ZeroCrossingSynth.cpp  ZeroCrossingSynth.h
Source/Engines/Deconfliction/: BinauralStrategy.cpp  BinauralStrategy.h  IDeconflictionStrategy.h  OddEvenStrategy.cpp  OddEvenStrategy.h  PartitionStrategy.cpp  PartitionStrategy.h  ResidueStrategy.cpp  ResidueStrategy.h  SpectralLaneStrategy.cpp  SpectralLaneStrategy.h  StaggerStrategy.cpp  StaggerStrategy.h
Source/UI/: DeconflictionPanel.cpp  DeconflictionPanel.h  FooterBar.cpp  FooterBar.h  GhostPanel.cpp  GhostPanel.h  GlowSeam.cpp  GlowSeam.h  HarmonicEnginePanel.cpp  HarmonicEnginePanel.h  HeaderBar.cpp  HeaderBar.h  LevelMeter.cpp  LevelMeter.h  NeumorphicPanel.cpp  NeumorphicPanel.h  OutputPanel.cpp  OutputPanel.h  PhantomColours.h  PhantomKnob.cpp  PhantomKnob.h  PhantomLookAndFeel.cpp  PhantomLookAndFeel.h  PitchTrackerPanel.cpp  PitchTrackerPanel.h  RecipeWheel.cpp  RecipeWheel.h  RecipeWheelPanel.cpp  RecipeWheelPanel.h  SidechainPanel.cpp  SidechainPanel.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  StereoPanel.cpp  StereoPanel.h
Source/WebUI/: circuit-board.js  index.html  juce-frontend.js  knob-mini.js  knob.js  morph.js  oscilloscope.js  phantom.js  preset-browser.js  preset-dropdown.js  preset-header.js  preset-spectrum.js  preset-system.js  recipe-wheel.js  spectrum.js  styles.css
docs/: PRESET_SYSTEM.md  ableton-integration-paths.md  morph-brainstorm-notes.md  morph-oled-ridge-handoff.md  sound-design-guide.md  thoughts-2026-04-17.md
docs/superpowers/plans/: 2026-04-08-phantom-implementation.md  2026-04-11-phantom-ui.md  2026-04-11-phantom-webview-ui.md  2026-04-12-resyn-mode.md  2026-04-12-shape-knob-waveform.md  2026-04-12-synth-filter-and-presets.md  2026-04-12-wavelet-length-gate.md  2026-04-13-dsp-improvements.md  2026-04-13-frontend-fixes.md  2026-04-13-wavelet-enhancements.md  2026-04-16-knob-icy-redesign.md  2026-04-17-advanced-mode.md  2026-04-19-preset-system.md  2026-04-21-preset-browser-spectrum-columns.md  2026-04-21-preset-recipe-spectrum-preview.md  2026-04-22-ab-compare.md  2026-04-23-morph-module.md
docs/superpowers/specs/: 2026-04-08-phantom-design.md  2026-04-11-phantom-dsp-rewrite.md  2026-04-11-phantom-ui-design.md  2026-04-11-phantom-webview-ui-design.md  2026-04-12-dsp-architecture-comparison.md  2026-04-12-resyn-mode-design.md  2026-04-12-shape-knob-waveform-design.md  2026-04-12-synth-filter-and-presets-design.md  2026-04-12-wavelet-length-design.md  2026-04-13-fixes-and-improvements.md  2026-04-13-wavelet-enhancements-design.md  2026-04-16-knob-icy-redesign-design.md  2026-04-17-advanced-mode-design.md  2026-04-19-preset-system-design.md  2026-04-21-preset-browser-spectrum-columns-design.md  2026-04-21-preset-recipe-spectrum-preview-design.md  2026-04-22-ab-compare-design.md  2026-04-23-morph-design.md
mockups/: 01-clean-minimal.html  02-dark-glass.html  03-brutalist-industrial.html  04-retro-crt.html  05-holographic-blade.html  06-bioluminescent.html  07-wabi-sabi.html  08-crystalline-prism.html  09-neural-network.html  10-void-dimension.html
tests/: ABSlotManagerTests.cpp  BassExtractorTests.cpp  BinauralStageTests.cpp  CMakeLists.txt  CrossoverBlendTests.cpp  DeconflictionTests.cpp  EnvelopeFollowerTests.cpp  HarmonicGeneratorTests.cpp  MorphEngineTests.cpp  ParameterTests.cpp  PerceptualOptimizerTests.cpp  PhantomEngineTests.cpp  PitchTrackerTests.cpp  PresetManagerTest.cpp  PresetPreviewTests.cpp  SerializationTests.cpp  WaveletSynthTests.cpp  WaveshaperTests.cpp
